<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceCategory
        android:key="pref_key_functionality"
        android:title="@string/functionality">


        <Preference android:title="@string/remove_ads"
            android:summary="@string/remove_ads_detail"
            android:key="key_pref_action_remove_ads"/>

        <Preference android:title="@string/restore_purchase"
            android:summary="@string/restore_purchase_detail"
            android:key="key_pref_action_restore_purchase"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_pref_info"
        android:title="@string/developer_info"
        >
        <Preference android:title="@string/string_legal"
            android:key="key_pref_legal"
            android:order="99"/>
        </PreferenceCategory>

</PreferenceScreen>