<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
    <!--android:icon="@android:drawable/ic_menu_search"-->
    <!--android:id="@+id/menu_search"-->
    <!--app:showAsAction="always"-->
    <!--android:visible="false"-->
    <!--android:title="@string/search" />-->
    <!--<item-->
    <!--android:id="@+id/menu_settings"-->
    <!--android:title="@string/settings" />-->
    <item
        android:id="@+id/menu_tab_refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"
        />

    <item
        android:id="@+id/menu_legal"
        android:title="@string/string_legal" />
    <item
        android:id="@+id/menu_feedback"
        android:title="@string/send_feedback" />
</menu>