<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

    <EditText
        android:id="@+id/et_dia_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/note_hint"/>

    <CheckBox
        android:id="@+id/cb_is_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_dia_time"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:text="@string/is_visible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:checked="true"/>

    <EditText
        android:id="@+id/et_dia_time"
        android:layout_width="148dp"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_dia_note"
        android:layout_toLeftOf="@+id/cb_is_visible"
        android:layout_toStartOf="@+id/cb_is_visible"
        android:ems="10"
        android:hint="@string/min_worked"
        android:inputType="number"/>

    <View
        android:id="@+id/v_line_full"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_dia_time"
        android:layout_margin="10dp"
        android:background="#FBA400"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/tv_dia_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_line_full"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/cb_dia_email_client"
        android:layout_toStartOf="@+id/cb_dia_email_client"
        android:text="@string/email_c"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <CheckBox
        android:id="@+id/cb_dia_email_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/v_line_full"
        android:checked="false"
        android:text="@string/tech"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <CheckBox
        android:id="@+id/cb_dia_email_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_line_full"
        android:layout_toLeftOf="@id/cb_dia_email_tech"
        android:layout_toStartOf="@id/cb_dia_email_tech"
        android:checked="false"
        android:text="@string/client"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

</RelativeLayout>