<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Init">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_init_server"
        android:inputType="textFilter|textNoSuggestions"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/server_hint"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_init_username"
        android:singleLine="true"
        android:inputType="textFilter|textNoSuggestions"
        android:hint="@string/username"
        android:layout_below="@+id/et_init_server"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_init_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_init_username"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/b_init_login"
        android:layout_below="@+id/tv_init_assure"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/init_assure"
        android:id="@+id/tv_init_assure"
        android:layout_below="@+id/et_init_password"
        android:layout_centerHorizontal="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/av_init_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5637328886369714/2664371584">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
