<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/api_key_instructions"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:id="@+id/tv_api_desc"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintTop_toBottomOf="@+id/et_api_key"
        android:layout_marginTop="16dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/api_key"
        android:id="@+id/et_api_key"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.56"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:text="@string/enable_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_enable_notifications"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_api_desc"
        android:layout_marginRight="8dp" />

    <CheckBox
        android:text="@string/user_pass_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cb_userpass_auth"
        app:layout_constraintBaseline_toBaselineOf="@+id/b_enable_notifications"
        app:layout_constraintLeft_toLeftOf="@+id/et_api_key"
        app:layout_constraintRight_toLeftOf="@+id/b_enable_notifications"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <View
        android:id="@+id/v_separator"
        android:layout_width="0dp"
        android:background="@color/colorAccent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/b_enable_notifications"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_username"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/v_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/username"
        android:layout_width="0dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/et_username"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:hint="@string/password"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_username"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:text="@string/enable_userpass_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/b_enable_userpass_auth"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>